@@ -3,7 +3,6 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- quick copy doesn't scroll to caret
 - do some profiling
 - wheel mouse -- option: jEdit mods -vs- system-wide mods
 - rect select and trailing whitespace
